--- a/config/inputs.yaml
+++ b/config/inputs.yaml
@@ -1,9 +1,9 @@
 samplesFile:           "config/samples.txt"
-singularity_samtools:  "/nfs/shared/singularities/samtools_1-9_1.0.0.sif"
-singularity_java:      "/nfs/shared/singularities/openjdk1.8.simg"
-singularity_vt:        "/nfs/shared/singularities/vt.simg"
-singularity_vt2:       "/nfs/shared/singularities/variantutils_0.6.sif"
-referenceFile:         "/nfs/shared/reference/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna"
+singularity_samtools:  "/shared/singularities/samtools_1-9_1.0.0.sif"
+singularity_java:      "/shared/singularities/openjdk1.8.simg"
+singularity_vt:        "/shared/singularities/vt.simg"
+singularity_vt2:       "/shared/singularities/variantutils_0.6.sif"
+referenceFile:         "/shared/reference/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna"
 varscanLib:            "resources/VarScan.v2.4.4.jar"
 vcfannoConfig:         "resources/conf.toml"
-picardLib:             "/nfs/shared/lib/picard.jar"
+picardLib:             "/shared/lib/picard.jar"
