--- a/singularity_bind.env
+++ b/singularity_bind.env
@@ -4,5 +4,5 @@
 export TMP=./tmp
 export TMPDIR=$TMP
 export JVM_ARGS="-Djava.io.tmpdir=$TMPDIR -Xmx1900m"
-sb="/nfs/shared:/nfs/shared"
+sb="/shared:/shared"
 export SINGULARITY_BIND=$sb
