--- a/config/inputs.yaml
+++ b/config/inputs.yaml
@@ -1,8 +1,7 @@
-samplesFile:           "config/samples.txt"
-singularity_samtools:  "/shared/singularities/samtools_1-9_1.0.0.sif"
-singularity_java:      "/shared/singularities/openjdk1.8.simg"
-singularity_vt:        "/shared/singularities/vt.simg"
-singularity_vt2:       "/shared/singularities/variantutils_0.6.sif"
+singularity_samtools:  "samtools_1-9_1.0.0.sif"
+singularity_java:      "openjdk1.8.simg"
+singularity_vt:        "vt.simg"
+singularity_vt2:       "variantutils_0.6.sif"
 referenceFile:         "/shared/reference/GCA_000001405.15_GRCh38_no_alt_analysis_set.fna"
 varscanLib:            "resources/VarScan.v2.4.4.jar"
 vcfannoConfig:         "resources/conf.toml"
